--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "better-auth": "^0.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
